[gd_scene load_steps=22 format=3 uid="uid://dfejgunpg3kyl"]

[ext_resource type="Texture2D" uid="uid://b266wqvrpbc5v" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer-Idle/slimer-idle1.png" id="1_m5aau"]
[ext_resource type="Texture2D" uid="uid://cb7mvhvbmmp8s" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer/slimer1.png" id="1_n53p0"]
[ext_resource type="Script" path="res://kẻ thù.gd" id="1_pnaws"]
[ext_resource type="Texture2D" uid="uid://ck0hkx04md4fx" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer/slimer2.png" id="2_dt7gh"]
[ext_resource type="Texture2D" uid="uid://bphb7mv533ok6" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer-Idle/slimer-idle2.png" id="2_mup4t"]
[ext_resource type="Texture2D" uid="uid://b77k6yhallhm3" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer/slimer3.png" id="3_30qfr"]
[ext_resource type="Texture2D" uid="uid://b723g3ffs0oeh" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer-Idle/slimer-idle3.png" id="3_lkt0i"]
[ext_resource type="Texture2D" uid="uid://e58nj1qywxa8" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer-Idle/slimer-idle4.png" id="4_61k2l"]
[ext_resource type="Texture2D" uid="uid://bqdyyh1edt5nh" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer/slimer4.png" id="4_ldgft"]
[ext_resource type="Texture2D" uid="uid://jc7tj57hv6ss" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer/slimer5.png" id="5_6ki3u"]
[ext_resource type="Texture2D" uid="uid://cqvs8bq51fyf" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer-Idle/slimer-idle5.png" id="5_36wkk"]
[ext_resource type="Texture2D" uid="uid://c1uwtc3xgoet0" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer-Idle/slimer-idle6.png" id="6_kfuo3"]
[ext_resource type="Texture2D" uid="uid://bl6m632g5oww5" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer/slimer6.png" id="6_mno22"]
[ext_resource type="Texture2D" uid="uid://c08l0rh3ntyc5" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer-Idle/slimer-idle7.png" id="7_s81r1"]
[ext_resource type="Texture2D" uid="uid://cqws7tkrdc1v5" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer/slimer7.png" id="7_wdt7t"]
[ext_resource type="Texture2D" uid="uid://d3xkphe2npcff" path="res://Forest of Illusion Files/Layers/Enemies Pack FIles/Sprites/Slimer-Idle/slimer-idle8.png" id="8_mb8fa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_srh1e"]
radius = 8.0
height = 16.0

[sub_resource type="SpriteFrames" id="SpriteFrames_g11nq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_mno22")
}, {
"duration": 1.0,
"texture": ExtResource("6_mno22")
}, {
"duration": 1.0,
"texture": ExtResource("6_mno22")
}, {
"duration": 1.0,
"texture": ExtResource("6_mno22")
}, {
"duration": 1.0,
"texture": ExtResource("6_mno22")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_m5aau")
}, {
"duration": 1.0,
"texture": ExtResource("2_mup4t")
}, {
"duration": 1.0,
"texture": ExtResource("3_lkt0i")
}, {
"duration": 1.0,
"texture": ExtResource("4_61k2l")
}, {
"duration": 1.0,
"texture": ExtResource("5_36wkk")
}, {
"duration": 1.0,
"texture": ExtResource("6_kfuo3")
}, {
"duration": 1.0,
"texture": ExtResource("7_s81r1")
}, {
"duration": 1.0,
"texture": ExtResource("8_mb8fa")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_n53p0")
}, {
"duration": 1.0,
"texture": ExtResource("2_dt7gh")
}, {
"duration": 1.0,
"texture": ExtResource("3_30qfr")
}, {
"duration": 1.0,
"texture": ExtResource("4_ldgft")
}, {
"duration": 1.0,
"texture": ExtResource("5_6ki3u")
}, {
"duration": 1.0,
"texture": ExtResource("6_mno22")
}, {
"duration": 1.0,
"texture": ExtResource("7_wdt7t")
}],
"loop": true,
"name": &"slimer",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6n5ff"]
radius = 256.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pf2tn"]
size = Vector2(32, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_roghw"]
size = Vector2(48, 8)

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_pnaws")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_srh1e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8.75004)
scale = Vector2(1.28049, 1.30263)
sprite_frames = SubResource("SpriteFrames_g11nq")
animation = &"death"

[node name="nhận diện người chơi" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="nhận diện người chơi"]
shape = SubResource("CircleShape2D_6n5ff")

[node name="playerdeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdeath"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_pf2tn")

[node name="playerconllision" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerconllision"]
position = Vector2(0, 24)
shape = SubResource("RectangleShape2D_roghw")

[connection signal="body_entered" from="nhận diện người chơi" to="." method="_on_nhận_diện_người_chơi_body_entered"]
[connection signal="body_exited" from="nhận diện người chơi" to="." method="_on_nhận_diện_người_chơi_body_exited"]
[connection signal="body_entered" from="playerdeath" to="." method="_on_playerdeath_body_entered"]
[connection signal="body_entered" from="playerconllision" to="." method="_on_playerconllision_body_entered"]
